# SaGe

./: README.md  pyproject.toml
src/: run.py
src/sage/: __init__.py  embeddings.py  loss.py  tokeniser.py  vocab.py  vocabulariser.py
src/sage/util/: iterables.py  paths.py
src/sage_tokenizer/: SaGeVocabBuilder.py  embeddings.py  model.py  utils.py
